--- a/src/sections/BlogSection/BlogSection.css
+++ b/src/sections/BlogSection/BlogSection.css
@@ -6,10 +6,7 @@
   padding-bottom: 50px;
 }
 
-.blog-section-container-mobile {
-}
-
-.blog-section-first-item {
+.blog-section-first-item-desktop {
   display: grid;
   grid-template-columns: 1fr;
   text-align: center;
@@ -21,6 +18,23 @@
   font-weight: bolder;
   border: 1px solid white;
   border-radius: 5px;
+}
+
+.blog-section-first-item-mobile {
+  background: linear-gradient(
+    145deg,
+    var(--main-app-color),
+    var(--main-deg-app-color)
+  );
+  box-shadow: 20px 20px 60px var(--main-deg-app-color),
+    -20px -20px 60px var(--main-deg-app-color);
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: white;
+  font-size: 35px;
+  opacity: 0.9;
+  font-weight: bolder;
+  text-align: center;
 }
 
 .blog-section-item-desktop {
