--- a/src/sections/ServicesSection/ServicesSection.css
+++ b/src/sections/ServicesSection/ServicesSection.css
@@ -75,6 +75,7 @@
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .services-group-item {
